--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         targetSdkVersion 23
         versionCode 18
         versionName "1.3.3"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -95,6 +96,13 @@ dependencies {
 
     // For project's own unit tests.
     testCompile 'junit:junit:4.12'
+    androidTestCompile 'junit:junit:4.12'
+    // To test classes that depend on JSON, this is needed. It is (according to
+    // a comment below http://stackoverflow.com/a/30759769) the correct version
+    // of JSON that matches the version in "android.jar". When running plain
+    // unit tests, the Android JSON classes are stubs with no implementation,
+    // so a real implementation is required.
+    testCompile 'org.json:json:20080701'
 }
 
 repositories {
