--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
         config {
         }
     }
-    compileSdkVersion 24
-    buildToolsVersion '24.0.3'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "com.aricneto.twistytimer"
         minSdkVersion 16
@@ -19,71 +19,62 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'),
-                    'proguard-rules.pro'
+                          'proguard-rules.pro'
         }
     }
     productFlavors {
     }
 }
 
-// Required for Butterknife support.
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-    }
-}
-
-apply plugin: 'com.neenbedankt.android-apt'
-
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':TNoodle')
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:support-v4:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:gridlayout-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:percent:24.2.1'
-    // Butterknife ("apt" dependency is defined in root "build.gradle" script).
-    compile 'com.jakewharton:butterknife:8.2.1'
-    apt     'com.jakewharton:butterknife-compiler:8.2.1'
+
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:support-v4:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:gridlayout-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:percent:25.1.0'
+
+    // Butter Knife (for binding views to fields using annotations)
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
     // Observable scrollview
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.2'
     // Dialogs
-    compile('com.github.afollestad.material-dialogs:core:0.8.5.6@aar') {
+    compile('com.github.afollestad.material-dialogs:core:0.8.6.2@aar') {
         transitive = true
     }
-    compile('com.github.afollestad.material-dialogs:commons:0.8.5.6@aar') {
+    compile('com.github.afollestad.material-dialogs:commons:0.8.6.2@aar') {
         transitive = true
     }
-    // FAB
+    // Floating action button on "TimerListFragment".
     compile 'com.gordonwong:material-sheet-fab:1.2.1'
     // Material Drawer
-    compile('com.mikepenz:materialdrawer:5.0.8@aar') {
+    compile('com.mikepenz:materialdrawer:5.8.1@aar') {
         transitive = true
     }
     // Joda-time
-    compile 'net.danlew:android.joda:2.9.4.1'
+    compile 'net.danlew:android.joda:2.9.5.1'
     // Material preferences
     compile 'com.jenzz:materialpreference:1.3'
     // Android SVG
     compile 'com.caverock:androidsvg:1.2.1'
     // MPAndroidChart
-    compile 'com.github.PhilJay:MPAndroidChart:v2.2.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.5'
     // RippleBackground
     compile 'com.skyfishjy.ripplebackground:library:1.0.1'
     // LicensesDialog
     compile 'de.psdev.licensesdialog:licensesdialog:1.8.0'
-    // Inapp Billing
+    // In-app Billing
     compile 'com.anjlab.android.iab.v3:library:1.0.31'
     // Material color picker
-    compile 'com.pes.materialcolorpicker:library:1.0.1'
+    compile 'com.pes.materialcolorpicker:library:1.0.4'
     // Sliding Up Panel
-    compile 'com.sothree.slidinguppanel:library:3.2.1'
+    compile 'com.sothree.slidinguppanel:library:3.3.1'
 
     compile 'com.github.iammert:MaterialIntroView:1.5.2'
 
